--- a/templates/input.html
+++ b/templates/input.html
@@ -14,10 +14,10 @@
         <div class="form-group">
             <button type="submit" class="btn btn-primary btn-block">
                 Guardar
-            </button> 
-            <button type="submit" class="btn btn-primary btn-block">
-                Ver patrones usados
-            </button> 
+            </button>  
+            <div>
+                <a href="index_patrones.html">VER PROTRONES DE DISEÑO IMPLEMENTADOS</a>
+            </div>
         </div>
     </form>
 </body>
